REGRESSION(r232198) [WinCairo] cannot convert from 'WTF::StringView' to 'const WTF::String' https://bugs.webkit.org/show_bug.cgi?id=186027

Unreviewed build fix

Source/WebCore:

No new tests (No behavior change).

* platform/network/curl/AuthenticationChallengeCurl.cpp:
(WebCore::AuthenticationChallenge::protectionSpaceFromHandle):
* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::setupTransfer):
(WebCore::CurlRequest::willSetupSslCtx):

Source/WebKitLegacy/win:

* WebMutableURLRequest.cpp:
(WebMutableURLRequest::setAllowsAnyHTTPSCertificate):
(WebMutableURLRequest::setClientCertificate):

Canonical link: https://commits.webkit.org/201458@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232233 268f45cc-cd09-0410-ab3c-d52691b4dbfc